--- a/Manuscrist/Manuscrit/bibManuscrit.bib
+++ b/Manuscrist/Manuscrit/bibManuscrit.bib
@@ -62,7 +62,7 @@
   Publisher                = {AIP Publishing}
 }
 
-@Article{cao2004efficient,
+@Article{Cao2004,
   Title                    = {Efficient formulation of the stochastic simulation algorithm for chemically reacting systems},
   Author                   = {Cao, Yang and Li, Hong and Petzold, Linda},
   Journal                  = {The journal of chemical physics},
@@ -74,7 +74,7 @@
   Publisher                = {AIP Publishing}
 }
 
-@Article{cao2004efficient,
+@Article{Cao2004a,
   Title                    = {Efficient formulation of the stochastic simulation algorithm for chemically reacting systems},
   Author                   = {Cao, Yang and Li, Hong and Petzold, Linda},
   Journal                  = {The journal of chemical physics},
@@ -82,6 +82,18 @@
   Number                   = {9},
   Pages                    = {4059--4067},
   Volume                   = {121},
+
+  Publisher                = {AIP Publishing}
+}
+
+@Article{chatterjee2005binomial,
+  Title                    = {Binomial distribution based $\tau$-leap accelerated stochastic simulation},
+  Author                   = {Chatterjee, Abhijit and Vlachos, Dionisios G and Katsoulakis, Markos A},
+  Journal                  = {The Journal of chemical physics},
+  Year                     = {2005},
+  Number                   = {2},
+  Pages                    = {024112},
+  Volume                   = {122},
 
   Publisher                = {AIP Publishing}
 }
@@ -168,6 +180,18 @@
   Publisher                = {Elsevier}
 }
 
+@Article{gillespie2003improved,
+  Title                    = {Improved leap-size selection for accelerated stochastic simulation},
+  Author                   = {Gillespie, Daniel T and Petzold, Linda R},
+  Journal                  = {The Journal of Chemical Physics},
+  Year                     = {2003},
+  Number                   = {16},
+  Pages                    = {8229--8234},
+  Volume                   = {119},
+
+  Publisher                = {AIP Publishing}
+}
+
 @Article{gross1995efficacy,
   Title                    = {The efficacy of influenza vaccine in elderly persons: a meta-analysis and review of the literature},
   Author                   = {Gross, Peter A and Hermogenes, Alicia W and Sacks, Henry S and Lau, Joseph and Levandowski, Roland A},
@@ -217,6 +241,18 @@
   Year                     = {2005}
 }
 
+@Article{hellander2008efficient,
+  Title                    = {Efficient computation of transient solutions of the chemical master equation based on uniformization and quasi-Monte carlo},
+  Author                   = {Hellander, Andreas},
+  Journal                  = {The Journal of chemical physics},
+  Year                     = {2008},
+  Number                   = {15},
+  Pages                    = {154109},
+  Volume                   = {128},
+
+  Publisher                = {AIP Publishing}
+}
+
 @Misc{henderson20016,
   Title                    = {6 Smallpox and Vaccinia},
 
@@ -232,6 +268,49 @@
   Organization             = {IEEE},
   Pages                    = {837--842},
   Volume                   = {1}
+}
+
+@InCollection{lecot2004quasi,
+  Title                    = {Quasi-Monte Carlo methods for estimating transient measures of discrete time Markov chains},
+  Author                   = {L{\'e}cot, Christian and Tuffin, Bruno},
+  Booktitle                = {Monte Carlo and Quasi-Monte Carlo Methods 2002},
+  Publisher                = {Springer},
+  Year                     = {2004},
+  Pages                    = {329--343}
+}
+
+@Article{liStochKit,
+  Title                    = { User's Guide for StochKit.},
+  Author                   = {Li},
+
+  Publisher                = {http://www.engr.ucsb.edu/~cse}
+}
+
+@Article{li2010efficient,
+  Title                    = {Efficient parallelization of the stochastic simulation algorithm for chemically reacting systems on the graphics processing unit},
+  Author                   = {Li, Hong and Petzold, Linda},
+  Journal                  = {International Journal of High Performance Computing Applications},
+  Year                     = {2010},
+  Number                   = {2},
+  Pages                    = {107--116},
+  Volume                   = {24},
+
+  Publisher                = {SAGE Publications}
+}
+
+@Article{li2006logarithmic,
+  Title                    = {Logarithmic direct method for discrete stochastic simulation of chemically reacting systems},
+  Author                   = {Li, Hong and Petzold, Linda},
+  Journal                  = {Journal of Chemical Physics},
+  Year                     = {2006}
+}
+
+@Article{Li2007,
+  Title                    = {Stochastic simulation of biochemical systems on the graphics processing unit},
+  Author                   = {Li, Hong and Petzold, Linda R},
+  Journal                  = {Bioinformatics. Cit{\'e} pages 32 et},
+  Year                     = {2007},
+  Volume                   = {35}
 }
 
 @Article{li2007stochastic,
@@ -266,12 +345,36 @@
   Publisher                = {Public Library of Science}
 }
 
+@Article{mccollum2006sorting,
+  Title                    = {The sorting direct method for stochastic simulation of biochemical systems with varying reaction execution behavior},
+  Author                   = {McCollum, James M and Peterson, Gregory D and Cox, Chris D and Simpson, Michael L and Samatova, Nagiza F},
+  Journal                  = {Computational biology and chemistry},
+  Year                     = {2006},
+  Number                   = {1},
+  Pages                    = {39--49},
+  Volume                   = {30},
+
+  Publisher                = {Elsevier}
+}
+
 @Article{panum1988observations,
   Title                    = {Observations made during the epidemic of measles on the Faroe Islands in the year 1846},
   Author                   = {Panum, Peter Ludwig},
   Journal                  = {The Challenge of Epidemiology: Issues and Selected Readings, Pan American Health Organization, New York},
   Year                     = {1988},
   Pages                    = {37--41}
+}
+
+@Article{pettigrew2007multinomial,
+  Title                    = {Multinomial tau-leaping method for stochastic kinetic simulations},
+  Author                   = {Pettigrew, Michel F and Resat, Haluk},
+  Journal                  = {The Journal of chemical physics},
+  Year                     = {2007},
+  Number                   = {8},
+  Pages                    = {084101},
+  Volume                   = {126},
+
+  Publisher                = {AIP Publishing}
 }
 
 @Article{shaw2010effective,
@@ -284,6 +387,18 @@
   Volume                   = {180},
 
   Publisher                = {Elsevier}
+}
+
+@Article{tian2004binomial,
+  Title                    = {Binomial leap methods for simulating stochastic chemical kinetics},
+  Author                   = {Tian, Tianhai and Burrage, Kevin},
+  Journal                  = {The Journal of chemical physics},
+  Year                     = {2004},
+  Number                   = {21},
+  Pages                    = {10356--10364},
+  Volume                   = {121},
+
+  Publisher                = {AIP Publishing}
 }
 
 @Article{tognotti2010SmallpoxErad,
